Fixes buggy tablist scrollbar

--- a/client/scss/ide/_tablist.scss
+++ b/client/scss/ide/_tablist.scss
@@ -3,6 +3,7 @@
   flex: 1 1 0;
   height: 35px;
   font-size: 0.9rem;
+  overflow: hidden;
 }
 
 .tabs-container > .tab {
